fix: contrast issues as per audit

--- a/theme/assets/scss/01-settings/_colormode-dark.scss
+++ b/theme/assets/scss/01-settings/_colormode-dark.scss
@@ -11,8 +11,8 @@
   --bs-secondary-color-rgb: 173, 181, 189;
   --bs-secondary-bg: #343a40;
   --bs-secondary-bg-rgb: 52, 58, 64;
-  --bs-tertiary-color: rgba(173, 181, 189, 50%);
-  --bs-tertiary-color-rgb: 173, 181, 189;
+  --bs-tertiary-color: #8c9095;
+  --bs-tertiary-color-rgb: 140, 144, 149;
   --bs-tertiary-bg: #2b3035;
   --bs-tertiary-bg-rgb: 43, 48, 53;
   --bs-primary-text-emphasis: #6ea8fe;
