--- a/theme/assets/scss/01-settings/_maps.scss
+++ b/theme/assets/scss/01-settings/_maps.scss
@@ -46,3 +46,12 @@ $font-sizes: (
   9: $font-size-base * .6,
   10: $font-size-base * .5,
 );
+
+// @see https://getbootstrap.com/docs/5.3/helpers/ratio/#sass-maps
+$aspect-ratios: (
+  "1x1": 100%,
+  "2x1": 50%,
+  "4x3": calc(3 / 4 * 100%),
+  "16x9": calc(9 / 16 * 100%),
+  "21x9": calc(9 / 21 * 100%)
+);
