--- a/theme/assets/scss/04-components/_articles.scss
+++ b/theme/assets/scss/04-components/_articles.scss
@@ -27,7 +27,7 @@ article {
 
     &.status--draft {
       color: var(--bs-light);
-      background-color: var(--bs-primary);
+      background-color: #b9484b;
     }
 
     &.status--gohugo {
